Fix ellipsis on overflow text in popover
[#165117368]

--- a/resources/styles/_reset.less
+++ b/resources/styles/_reset.less
@@ -2,7 +2,6 @@ html,
 body {
   height: 100%;
   position: relative;
-  overflow-x: hidden;
 }
 
 *,
